--- a/matlab_01/makefile
+++ b/matlab_01/makefile
@@ -9,6 +9,7 @@ reporte.pdf :
 	pdflatex Reporte/PracMatlab01_Grupo3_B42781_B47769_B42481.tex
 
 trabajo.zip:
-	zip -r PracMatlab01_Grupo3_B42781_B47769_B42481.zip /Reporte/*.pdf *.m
+	zip -r PracMatlab01_Grupo3_B42781_B47769_B42481.zip *.pdf *.m *.slx
 clean:
-	rm -f *.log *.aux *.pdf *.gz *~ *.zip
+	rm -f *.log *.aux *.pdf *.gz *~ *.zip *.out
+
