imagenes en pdf

--- a/proyecto_final/reporte/makefile
+++ b/proyecto_final/reporte/makefile
@@ -3,10 +3,10 @@
 all:  reporte.pdf 
 
 reporte.pdf : reporte.tex
-	pdflatex reporte.tex
+	pdflatex -shell-escape reporte.tex
 	bibtex reporte.aux
-	pdflatex reporte.tex
-	pdflatex reporte.tex
+	pdflatex -shell-escape reporte.tex
+	pdflatex -shell-escape reporte.tex
 
 clean:
 	rm -f *.log *.aux *.bbl *.lof *.lot *.toc *.blg *.pdf *.gz *~ *.zip *.out
