--- a/proyecto_final/makefile
+++ b/proyecto_final/makefile
@@ -1,2 +1,2 @@
 zipthis:
-	zip report/reporte.pdf simulacion/d_model_sim.m simulacion/Modelo_cinematico.slx simulacion/script.m /dynamic_model.slx
+	zip Grupo_3.zip reporte/reporte.pdf simulacion/d_model_sim.m simulacion/Modelo_cinematico.slx simulacion/script.m simulacion/dynamic_model.slx
